# zero-tokenizer

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0-EN  LICENSE-APACHE-2.0-ZH  LICENSE-MIT-ZH  LICENSE.md  README.md  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: .gitignore  README.md  compare_with_hf.py
datasets/: 1.txt  2.txt  3.txt
dict/: 化学常用符号表.txt  常用汉字字表.txt
docs/: bbpe.md  bpe.md  unigram.md  wordpiece.md
examples/bbpe/: training_example.py  usage_example.py  vocab_init_example.py
examples/bpe/: training_example.py  usage_example.py  vocab_init_example.py
examples/unigram/: training_example.py  usage_example.py  vocab_init_example.py
examples/wordpiece/: training_example.py  usage_example.py  vocab_init_example.py
python/zero_tokenizer/: __init__.py
scripts/: README.md  build.sh  dev_setup.sh  init_uv.sh  install.sh
src/: error.rs  lib.rs  prelude.rs
src/base/: merge_job.rs  mod.rs  tokenizer_base.rs  traits.rs  vocab_manager.rs  word.rs
src/bbpe/: bbpe.rs  mod.rs  tokenizer.rs
src/bpe/: bpe.rs  mod.rs  tokenizer.rs
src/unigram/: mod.rs  tokenizer.rs  unigram.rs
src/wordpiece/: mod.rs  tokenizer.rs  wordpiece.rs
tests/: bbpe_test.rs  common.rs  wordpiece_test.rs
tests/python/: test_basic.py  test_batch_operations.py  test_error_handling.py  test_functionality.py  test_training.py  test_vocab_init.py
tests/rust/: batch_operations_test.rs  bbpe_test.rs  bpe_test.rs  edge_cases_test.rs  error_handling_test.rs  pattern_test.rs  save_load_test.rs  test_utils.rs  unicode_test.rs  unigram_test.rs  wordpiece_test.rs
