[package]
name = "zero_tokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
dary_heap = "0.3"
indexmap = "2.2"
fancy-regex = "0.16.1"
log = "0.4.28"
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3"], optional = true }
pyo3-log = { version = "0.12.4", optional = true }
ahash = "0.8.12"
rayon = "1.11.0"
compact_str = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"

[features]
default = ["python"]
python = ["pyo3", "pyo3-log"]

[lib]
name = "zero_tokenizer"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# 集成测试配置
[[test]]
name = "bbpe_test"
path = "tests/rust/bbpe_test.rs"

[[test]]
name = "bpe_test"
path = "tests/rust/bpe_test.rs"
required-features = ["python"]

[[test]]
name = "unigram_test"
path = "tests/rust/unigram_test.rs"

[[test]]
name = "wordpiece_test"
path = "tests/rust/wordpiece_test.rs"

[[test]]
name = "save_load_test"
path = "tests/rust/save_load_test.rs"

[[test]]
name = "error_handling_test"
path = "tests/rust/error_handling_test.rs"

[[test]]
name = "unicode_test"
path = "tests/rust/unicode_test.rs"

[[test]]
name = "edge_cases_test"
path = "tests/rust/edge_cases_test.rs"

[[test]]
name = "batch_operations_test"
path = "tests/rust/batch_operations_test.rs"

[[test]]
name = "pattern_test"
path = "tests/rust/pattern_test.rs"