[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zero_tokenizer"
version = "0.1.0"
description = "A fast tokenizer implementation in Rust with Python bindings"
authors = [
    {name = "Zero Tokenizer Team"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
    "tokenizers>=0.13.0",  # 用于性能对比测试
]

[tool.maturin]
python-source = "python"
module-name = "zero_tokenizer._zero_tokenizer"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]